--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    Podaj imie: <input><br>
+    <input type="button"><br>
+    <p></p>
 </body>
 </html>
