fixed AEL first arg

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <input type="button"><br>
     <p></p>
     <script>
-        document.querySelectorAll("input")[1].addEventListener( "onclick", function(){
+        document.querySelectorAll("input")[1].addEventListener( "click", function(){
             document.querySelectorAll("p")[0].innerHTML="Cześć " + document.querySelectorAll("input")[0].value
         })
     </script>
