--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ciekawy tytół</title>
 </head>
 <body>
-    Podaj imie: <input><br>
-    <input type="button"><br>
-    <p></p>
+    
+    <main>Podaj imie: <input><br>
+        <input type="button"><br>
+        <p></p></main>
+    
     <script>
         document.querySelectorAll("input")[1].addEventListener( "click", function(){
             document.querySelectorAll("p")[0].innerHTML="Cześć " + document.querySelectorAll("input")[0].value
