updated html code

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     
-    <main>Podaj imie: <input><br>
-        <input type="button"><br>
+    <main>Podaj imie: <input placeholder="Podaj imie"><br>
+        <input type="button" value="Submit"><br>
         <p></p></main>
     
     <script>
