updated html code

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ciekawy tytół</title>
+    <title>Ciekawy tytuł</title>
 </head>
 <body>
     
-    <main>Podaj imie: <input placeholder="Podaj imie"><br>
-        <input type="button" value="Submit"><br>
+    <main>Podaj imie: <input><br>
+        <input type="button"><br>
         <p></p></main>
     
     <script>
