--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ciekawy tytuł</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
-    <main>Podaj imie: <input><br>
-        <input type="button"><br>
+    <main>Podaj imie: <input placeholder="Imie"><br>
+        <input type="button" value="Submit"><br>
         <p></p></main>
     
     <script>
